Add comments and correct readme

--- a/sample/index.html
+++ b/sample/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Example work "phonemask" library</title>
-    <script type="text/javascript" src="../src/phonemask.js"></script>
+    <script type="text/javascript" src="../src/phonemask.min.js"></script>
 </head>
 <body>
     <form action="">
